--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3952,8 +3952,14 @@
                             </table>
                             <div
                                 style="background:#f0f7ff; padding:12px 16px; border-radius:8px; margin-bottom:16px; font-size:13px; color:#004182; border:1px solid #c2e0ff;">
-                                <strong>💡 공사 진행 안내사항</strong>
-                                <ul style="margin: 5px 0 0 20px; padding: 0; list-style-type: disc; line-height: 1.6;">
+                                <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:8px;">
+                                    <strong>💡 공사 진행 안내 및 유의사항</strong>
+                                    <button class="btn btn-sm no-print" onclick="loadScheduleGuidelines()"
+                                        style="background:#0071e3; color:white; border:none; padding:4px 12px; border-radius:6px; font-size:11px; cursor:pointer;">
+                                        📥 유의사항 불러오기
+                                    </button>
+                                </div>
+                                <ul id="scheduleGuidelinesList" style="margin: 5px 0 0 20px; padding: 0; list-style-type: disc; line-height: 1.6;">
                                     <li>공사는 기상, 자재 수급, 공정 간섭 등 현장 상황에 따라 일정이 일부 조정될 수 있습니다.</li>
                                     <li>고객님께서 직접 발주하신 자재 또는 시공 항목은 반드시 사전 협의 후 진행 부탁드립니다.<br>
                                         <span style="color:#666; font-size:0.9em;">(사전 협의 없이 진행 시 공정 간섭 또는 책임 범위 문제가 발생할
@@ -4065,8 +4071,14 @@
 
                                 <div
                                     style="background:#f0f7ff; padding:12px 16px; border-radius:8px; margin-bottom:16px; font-size:13px; color:#004182; border:1px solid #c2e0ff;">
-                                    <strong>💡 A/S(사후관리) 안내 및 유의사항</strong>
-                                    <ul
+                                    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:8px;">
+                                        <strong>💡 A/S(사후관리) 안내 및 유의사항</strong>
+                                        <button class="btn btn-sm no-print" onclick="loadASGuidelines()"
+                                            style="background:#0071e3; color:white; border:none; padding:4px 12px; border-radius:6px; font-size:11px; cursor:pointer;">
+                                            📥 유의사항 불러오기
+                                        </button>
+                                    </div>
+                                    <ul id="asGuidelinesList"
                                         style="margin: 5px 0 0 20px; padding: 0; list-style-type: disc; line-height: 1.6;">
                                         <li>기본 A/S 기간은 공사 완료일로부터 12개월입니다.</li>
                                         <li>자재 A/S는 자재 입고일 기준 1년이며, 제조사 기준이 우선 적용됩니다.</li>
@@ -6021,6 +6033,48 @@
 
             renderScheduleTable();
             saveScheduleToCustomer();
+        }
+
+        // 스케줄 유의사항 불러오기 (구글 시트에서)
+        async function loadScheduleGuidelines() {
+            try {
+                const response = await fetch(`${CUSTOMER_SYNC_URL}?sheet=공사_스케줄&action=getGuidelines`);
+                const result = await response.json();
+
+                if (result.success && result.guidelines && result.guidelines.length > 0) {
+                    const guidelinesList = document.getElementById('scheduleGuidelinesList');
+                    if (guidelinesList) {
+                        guidelinesList.innerHTML = result.guidelines.map(item => `<li>${item}</li>`).join('');
+                        showToast('유의사항을 성공적으로 불러왔습니다', 'success');
+                    }
+                } else {
+                    showToast('불러올 유의사항이 없습니다', 'warning');
+                }
+            } catch (error) {
+                console.error('Error loading schedule guidelines:', error);
+                showToast('유의사항을 불러오는데 실패했습니다: ' + error.message, 'error');
+            }
+        }
+
+        // A/S 유의사항 불러오기 (구글 시트에서)
+        async function loadASGuidelines() {
+            try {
+                const response = await fetch(`${CUSTOMER_SYNC_URL}?sheet=AS관리리스트&action=getGuidelines`);
+                const result = await response.json();
+
+                if (result.success && result.guidelines && result.guidelines.length > 0) {
+                    const guidelinesList = document.getElementById('asGuidelinesList');
+                    if (guidelinesList) {
+                        guidelinesList.innerHTML = result.guidelines.map(item => `<li>${item}</li>`).join('');
+                        showToast('유의사항을 성공적으로 불러왔습니다', 'success');
+                    }
+                } else {
+                    showToast('불러올 유의사항이 없습니다', 'warning');
+                }
+            } catch (error) {
+                console.error('Error loading AS guidelines:', error);
+                showToast('유의사항을 불러오는데 실패했습니다: ' + error.message, 'error');
+            }
         }
 
         function showScheduleTemplateModal() {
