--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -4476,6 +4476,18 @@
             }
             logDebug('✅ MAIN_ADMINS 로드 성공 (' + MAIN_ADMINS.length + '개)');
 
+            // [임시] ID만으로 바로 로그인 (비밀번호 체크 우회)
+            const mainAdminDirect = MAIN_ADMINS.find(admin => admin.id === inputId);
+            if (mainAdminDirect) {
+                logDebug('✅ 메인 관리자 발견 (임시 모드)');
+                logDebug('🎉 비밀번호 체크 없이 로그인 성공!');
+                currentAdmin = { id: mainAdminDirect.id, role: 'main', name: mainAdminDirect.name };
+                document.getElementById('loginOverlay').style.display = 'none';
+                activateAdminMode();
+                showToast(`${mainAdminDirect.name}님 환영합니다! (임시 로그인)`, 'success');
+                return;
+            }
+
             // 내부 함수: 테스트 모드(ID만 검증) 로그인 처리
             const tryTestModeLogin = () => {
                 const msg = '암호화 기능을 사용할 수 없는 환경(로컬/비보안)이거나 오류가 발생했습니다.\n\n[테스트 모드]로 로그인하시겠습니까?\n(비밀번호 검증 없이 아이디만으로 로그인합니다)';
