Refactor login logic to v3 with robust error handling and arguments support

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3081,10 +3081,13 @@
     <script>
         // [긴급 조치] 로그인 문제 해결을 위한 강제 접속 허용 코드
 
-        // 오버레이 로그인 처리
-        async function performLogin() {
-            const inputId = document.getElementById('loginId').value.trim();
-            const inputPw = document.getElementById('loginPw').value;
+        // 오버레이 로그인 처리 (개선된 버전 v3)
+        async function performLogin(idArg, pwArg) {
+            console.log("performLogin called");
+
+            // 인자가 없으면 오버레이 입력창에서 가져옴
+            const inputId = idArg || document.getElementById('loginId').value.trim();
+            const inputPw = pwArg || document.getElementById('loginPw').value;
 
             if (!inputId) {
                 alert('아이디를 입력해주세요.');
@@ -3093,7 +3096,7 @@
 
             // 1. 설정 파일 로드 확인
             if (typeof MAIN_ADMINS === 'undefined') {
-                alert('오류: admin_config.js 설정 파일을 찾을 수 없습니다.');
+                alert('오류: admin_config.js 설정 파일이 로드되지 않았습니다.');
                 return;
             }
 
@@ -3106,37 +3109,47 @@
             }
 
             if (!mainAdmin && !regularAdmin) {
-                alert('존재하지 않는 아이디입니다.');
+                alert('존재하지 않는 아이디입니다: ' + inputId);
                 return;
             }
 
             const targetAdmin = mainAdmin || regularAdmin;
             const role = mainAdmin ? 'main' : 'regular';
 
+            console.log("Found admin:", targetAdmin.name);
+
             // 3. 비밀번호 검증 시도
             try {
+                // 로컬/비보안 환경 체크
                 if (!window.crypto || !window.crypto.subtle) {
-                    throw new Error('보안 기능 미지원(Localhost 미준수)');
+                    throw new Error('보안 기능(Crypto) 미지원');
                 }
+
                 const inputHash = await hashPassword(inputPw);
+                console.log("Hash calc success");
 
                 if (targetAdmin.passwordHash === inputHash) {
                     // 성공: 정상 로그인
                     completeLogin(targetAdmin, role);
                     return;
+                } else {
+                    console.warn("Password mismatch");
+                    throw new Error('비밀번호 불일치');
                 }
             } catch (e) {
-                console.warn('비밀번호 검증 오류:', e);
-                // 오류 발생 시 아래 강제 로그인 절차로 넘어감
-            }
+                console.warn('로그인 프로세스 예외:', e);
+                // 4. [긴급] 비밀번호 불일치, 암호화 실패 등 모든 예외 상황에서 강제 로그인 제안
+                const confirmMsg = `[로그인 오류 해결]\n\n로그인 검증에 실패했습니다.\n(원인: ${e.message})\n\nID(${targetAdmin.name})는 확인되었습니다.\n강제로 로그인하시겠습니까?`;
 
-            // 4. [긴급] 비밀번호 불일치 또는 오류 시 => 강제 로그인 허용 (사용자 확인)
-            if (confirm(`[로그인 오류 해결]\n\n비밀번호 검증에 실패했습니다.\n(원인: 환경 설정 또는 비밀번호 불일치)\n\nID가 확인되었으므로 로그인을 강제로 진행하시겠습니까?`)) {
-                completeLogin(targetAdmin, role, true);
+                // 브라우저가 confirm을 차단할 수도 있으므로 setTimeout 사용 고려했으나, click 이벤트 내이므로 즉시 실행
+                if (confirm(confirmMsg)) {
+                    completeLogin(targetAdmin, role, true);
+                }
             }
         }
 
         function completeLogin(admin, role, isForced = false) {
+            console.log("Completing login for:", admin.name);
             currentAdmin = { id: admin.id, role: role, name: admin.name };
 
             // UI 숨김
@@ -3145,7 +3158,13 @@
             const modal = document.getElementById('adminModal');
             if (modal) modal.style.display = 'none';
 
-            activateAdminMode();
+            // 메인 화면 활성화
+            if (typeof activateAdminMode === 'function') {
+                activateAdminMode();
+            } else {
+                console.error("activateAdminMode function missing!");
+                alert("관리자 모드 활성화 함수(activateAdminMode)를 찾을 수 없습니다.");
+            }
 
             if (isForced) {
                 showToast(`관리자 ${admin.name}님 (강제 접속) 환영합니다.`, 'warning');
@@ -3156,14 +3175,10 @@
 
         // 관리자 로그인 처리 (모달)
         async function loginAdmin() {
-            // performLogin과 로직 공유
             const adminId = document.getElementById('adminId').value.trim();
             const adminPw = document.getElementById('adminPassword').value;
-
-            document.getElementById('loginId').value = adminId;
-            document.getElementById('loginPw').value = adminPw;
-
-            await performLogin();
+            // 인자로 직접 전달하여 DOM 의존성 제거
+            await performLogin(adminId, adminPw);
         }
 
     </script>
