--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3142,7 +3142,7 @@
             <div class="sidebar-header">
                 <h3>고객 목록</h3>
                 <div style="display:flex;gap:6px;">
-                    <button class="btn btn-sm" onclick="syncFromCloud()" title="클라우드에서 불러오기"
+                    <button class="btn btn-sm" onclick="alert('버튼 클릭됨!'); syncFromCloud();" title="클라우드에서 불러오기"
                         style="background:#34c759; color:white; border:none; padding:6px 10px; border-radius:6px; cursor:pointer; font-size:11px; font-weight:600;">☁️↓</button>
                     <button class="btn btn-primary btn-sm" onclick="newCustomer()">+ 신규</button>
                 </div>
