--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3142,7 +3142,7 @@
             <div class="sidebar-header">
                 <h3>고객 목록</h3>
                 <div style="display:flex;gap:6px;">
-                    <button class="btn btn-sm" onclick="alert('버튼 클릭됨!'); syncFromCloud();" title="클라우드에서 불러오기"
+                    <button class="btn btn-sm" onclick="syncFromCloud();" title="클라우드에서 불러오기"
                         style="background:#34c759; color:white; border:none; padding:6px 10px; border-radius:6px; cursor:pointer; font-size:11px; font-weight:600;">☁️↓</button>
                     <button class="btn btn-primary btn-sm" onclick="newCustomer()">+ 신규</button>
                 </div>
@@ -7206,16 +7206,10 @@
         // [클라우드 동기화] Google Sheets에서 고객 데이터 불러오기
         // ==========================================
         async function syncFromCloud() {
-            alert('🔍 syncFromCloud 함수가 호출되었습니다!');
-
-            if (!confirm('클라우드에서 고객 데이터를 불러옵니다.\n\n기존 로컬 데이터와 병합됩니다.\n진행하시겠습니까?')) {
-                alert('❌ 사용자가 취소했습니다.');
-                return;
-            }
+            let debugInfo = '=== 클라우드 동기화 시작 ===\n';
+            debugInfo += '시작 시간: ' + new Date().toLocaleTimeString() + '\n';
 
             showToast('클라우드에서 데이터 불러오는 중...', 'info');
-
-            let debugInfo = '=== 클라우드 동기화 디버그 ===\n';
 
             try {
                 // Google Apps Script GET 요청 (고객 데이터 조회 - 캐시 방지)
